[package]
name = "untitled2"
version = "0.1.0"
authors = ["Jasper Visser <jasper.visser@keylane.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protobuf = "*"
serde = { version = "1.0.*", features = ["derive"] }
serde_json = "1.0.*"

[features]
with-serde = []